--- a/package.json
+++ b/package.json
@@ -32,16 +32,22 @@
     "@progress/kendo-data-query": "^1.2.2",
     "@progress/kendo-drawing": "^1.5.2",
     "@progress/kendo-theme-default": "^2.50.0",
+    "@types/cookie-parser": "^1.4.1",
+    "angular2-modal": "^3.0.3",
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "gulp": "^3.9.1",
     "jquery": "^3.3.1",
+    "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "ng2-cookies": "^1.0.12",
     "reload": "^2.2.2",
+    "router": "^1.3.2",
     "rxjs": "^5.5.6",
     "sha1": "^1.1.1",
     "sweetalert2": "^7.18.0",
