--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build && nodemon server.js",
+    "build": "ng build && nodemon server",
     "test": "ng test",
+    "pree2e": "webdriver-manager update --standalone false --gecko false",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
